test/negative/invalid_bus_size_register.net
INPUT a
OUTPUT b
VAR a, b: 2
IN
b = NOT a
